Fix rating wrapping

--- a/films/degrees-of-separation/style.css
+++ b/films/degrees-of-separation/style.css
@@ -179,6 +179,8 @@ body {
   gap: 0.3em;
   margin: 0.2em 0 0.2em 0;
   font-size: 1.1em;
+  flex-wrap: nowrap;
+  white-space: nowrap;
 }
 .star {
   color: #f1c40f;
